--- a/beispiel/html.html
+++ b/beispiel/html.html
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-    <title>Titel der Seite</title>
+    <title>Titel</title>
 </head>
 
-
 <body>
-    <script>
-
-    </script>
+    <h1>Überschrift 1</h1>
+    <p>
+        Lorem ipsum [...]
+    </p>
+    <img src="bunny.jpg">
 </body>
 
 </html>
+
+<canvas></canvas>
+<script src="main.js"></script>
